@@ -1,6 +1,10 @@
 #Change Log
 All notable changes to this project starting with the 0.6.0 release will be documented in this file. This project adheres to [Semantic Versioning](http://semver.org)
 
+## [Unreleased][unreleased]
+### Changed
+- `site backup get` flag `--to-directory` is now `--to` and accepts either a directory or a file name (#493)
+
 ##[0.8.0] - 2015-09-15
 ###Added
 - Environment variable TERMINUS_LOG_DIR will save all logs to file in the given directory. (#487)
